Added text to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ipsam vel, cum corporis dignissimos perferendis? Repellendus aliquam earum veritatis saepe, velit quibusdam labore expedita dolor molestias enim dolores totam deserunt?
 </body>
 </html>
